updated with new sbatch scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@
 --extra-index-url https://download.pytorch.org/whl/cu118
 # torch==2.1.1+cu118
 # torchvision==0.16.1+cu118
-torch==2.0.0+cu118
-torchvision==0.15.1+cu118
-torchaudio==2.0.1+cu118
+#torch==2.0.0+cu118
+#torchvision==0.15.1+cu118
+#torchaudio==2.0.1+cu118
 
 
 # JupyterLab
@@ -79,4 +79,4 @@ joblib==1.3.2
 warp-lang==1.0.2
 
 # For PyTorch3D
-fvcore==0.1.5.post20221221
+#fvcore==0.1.5.post20221221
