--- a/fp_config.yaml
+++ b/fp_config.yaml
@@ -1,12 +1,12 @@
 foundation_pose:
   est_refine_iter: 10
-  track_refine_iter: 2
-  register: false
+  track_refine_iter: 10
+  register: true
   use_ransac: true 
-  use_pcd: true 
-  decim_verts_num: 200000
+  use_pcd: true
+  decim_verts_num: 400000 #200000
   pcd_filter_thresh: 0.1
-  camera_idxs: [0, 1, 3, 4, 5, 6, 7]
+  camera_idxs: [0, 1, 2, 3, 4, 5, 6, 7]
   start_frame: 0 
-  num_frames: 400 
+  num_frames: 190
   debug: 2
